<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="382dp"
        android:layout_height="58dp"
        android:layout_marginTop="68dp"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonPorcentaje"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:background="@drawable/boton_redondo_gris"
        android:onClick="presionarDigito"
        android:text="@string/porcentaje"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/buttonDiv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonBorrar"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:background="@drawable/boton_redondo_numeros"
        android:onClick="presionarDigito"
        android:text="@string/_4"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonBorrarTodo"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:background="@drawable/boton_redondo_gris"
        android:text="@string/_borrar_todo"
        android:textColor="#000000"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/buttonBorrar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonBorrar"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:background="@drawable/boton_redondo_gris"
        android:onClick="presionarDigito"
        android:text="@string/_eliminar"
        android:textColor="#000000"
        android:textSize="20sp"

        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/buttonPorcentaje"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonBorrarTodo"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:background="@drawable/boton_redondo_numeros"
        android:onClick="presionarDigito"
        android:text="@string/_2"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="382dp"
        android:layout_height="58dp"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.019"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonIgual"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:background="@drawable/boton_redondo"
        android:text="@string/igual"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPunto"
        app:layout_constraintTop_toBottomOf="@+id/buttonSuma"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints,VisualLintButtonSize" />

    <Button
        android:id="@+id/button0"
        android:layout_width="173dp"
        android:layout_height="71dp"
        android:background="@drawable/boton_cero"
        android:onClick="presionarDigito"
        android:text="@string/_0"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonPunto"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints,VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonDiv"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:background="@drawable/boton_redondo"
        android:onClick="presionarOperacion"
        android:text="@string/div"
        android:textSize="20sp"

        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/buttonMulti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPorcentaje"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints,VisualLintOverlap,TextContrastCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:background="@drawable/boton_redondo_numeros"
        android:onClick="presionarDigito"
        android:text="@string/_3"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/buttonPunto"
        app:layout_constraintEnd_toStartOf="@+id/buttonSuma"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button1"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:background="@drawable/boton_redondo_numeros"
        android:onClick="presionarDigito"
        android:text="@string/_1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonPunto"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:background="@drawable/boton_redondo_numeros"
        android:onClick="presionarDigito"
        android:text="@string/punto"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonIgual"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints,VisualLintButtonSize" />

    <Button
        android:id="@+id/button7"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:background="@drawable/boton_redondo_numeros"
        android:onClick="presionarDigito"
        android:text="@string/_7"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBorrarTodo"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonMulti"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:background="@drawable/boton_redondo"
        android:onClick="presionarOperacion"
        android:text="@string/_multi"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/buttonResta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/buttonDiv"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button9"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:background="@drawable/boton_redondo_numeros"
        android:onClick="presionarDigito"
        android:text="@string/_9"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/buttonMulti"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/buttonPorcentaje"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonResta"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:background="@drawable/boton_redondo"
        android:onClick="presionarOperacion"
        android:text="@string/menos"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/buttonSuma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/buttonMulti"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button5"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:background="@drawable/boton_redondo_numeros"
        android:onClick="presionarDigito"
        android:text="@string/_5"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button6"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:background="@drawable/boton_redondo_numeros"
        android:onClick="presionarDigito"
        android:text="@string/_6"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/buttonResta"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonSuma"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:background="@drawable/boton_redondo"
        android:onClick="presionarOperacion"
        android:text="@string/_suma"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/buttonIgual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/buttonResta"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button8"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:background="@drawable/boton_redondo_numeros"
        android:onClick="presionarDigito"
        android:text="@string/_8"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/buttonBorrar"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="buttonDiv,button9,buttonPunto,buttonPorcentaje,buttonBorrar,button0,button8,button5,textView2,button7,buttonSuma,button3,buttonIgual,button6,button2,buttonResta,buttonMulti,button1,buttonBorrarTodo,button4" />


</androidx.constraintlayout.widget.ConstraintLayout>